# avrion

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/cli/: CMakeLists.txt
apps/cli/src/: main.cpp
apps/gui/: CMakeLists.txt
apps/gui/src/: main.cpp
apps/tools/: intel_hex_decoder.cpp
include/: intel_hex_decoder.h
include/core/: types.h
include/cpu/: avr_cpu.h  cpu_state.h
include/device/: atmega328p.h  device.h  device_config.h
include/memory/: memory_map.h
include/periph/: gpio.h  peripheral.h
src/cpu/: avr_cpu.cpp
src/device/: atmega328p.cpp  device.cpp
src/memory/: memory_map.cpp
src/periph/: gpio.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_intel_hex_decoder.cpp
